--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,13 @@
 <html>
 <head>
   <title><%= @title %></title>
+  <%= csrf_meta_tag %>
   <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
   <%= stylesheet_link_tag 'blueprint/print', :media => 'print' %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+  <%= stylesheet_link_tag 'custom', :media => 'screen' %>
 </head>
 <body>
-	<div class ="container">
+	<div class="container">
 		<%= render 'layouts/header' %>
 		<section class="round">
 			<%= yield %>
