--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -3,7 +3,8 @@
 }
 
 body {
-	background: #0E7DB2
+	background: #0E7DB2;
+	color: #5A0084;
 }
 
 header {
@@ -22,8 +23,19 @@ section {
 	background: #fff;
 }
 
+section p {
+	font-size: 90%;
+	padding: 10px;
+}
+
 section h1 {
 	font-size: 200%;
+	color: #5E8A31;
+}
+
+section h2 {
+	font-size: 100%;
+	color: #5E8A31;
 }
 
 nav {
